@@ -1,2 +1,0 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<Scenes xmlns="http://code.google.com/p/open-zwave/" version="1" />
