@@ -49,128 +49,137 @@ void CDataPush::DoFibaroPush()
 	std::string fibaroIP = "";
 	std::string fibaroUsername = "";
 	std::string fibaroPassword = "";
+	int iIsVersion4 = 0;
 	m_sql.GetPreferencesVar("FibaroIP", fibaroIP);
 	m_sql.GetPreferencesVar("FibaroUsername", fibaroUsername);
 	m_sql.GetPreferencesVar("FibaroPassword", fibaroPassword);
+	m_sql.GetPreferencesVar("FibaroVersion4", iIsVersion4);
+
+	
 	int fibaroDebugActiveInt;
 	bool fibaroDebugActive = false;
 	m_sql.GetPreferencesVar("FibaroDebug", fibaroDebugActiveInt);
 	if (fibaroDebugActiveInt == 1) {
 		fibaroDebugActive = true;
 	}
+	bool bIsV4 = (iIsVersion4 != 0);
 
 	if (
-		(fibaroIP!="")&&
-		(fibaroUsername!="")&&
-		(fibaroPassword!="")
-	) {
-		std::vector<std::vector<std::string> > result;
-		char szTmp[300];
-		sprintf(szTmp, 
-			"SELECT A.DeviceID, A.DelimitedValue, B.ID, B.Type, B.SubType, B.nValue, B.sValue, A.TargetType, A.TargetVariable, A.TargetDeviceID, A.TargetProperty, A.IncludeUnit, B.SwitchType FROM FibaroLink as A, DeviceStatus as B "
-			"WHERE (A.DeviceID == '%llu' AND A.Enabled = '1' AND A.DeviceID==B.ID)",
-			m_DeviceRowIdx);
-		result=m_sql.query(szTmp);
-		if (result.size()>0)
+		(fibaroIP == "") ||
+		(fibaroUsername == "") ||
+		(fibaroPassword == "")
+		)
+		return;
+	std::vector<std::vector<std::string> > result;
+	char szTmp[300];
+	sprintf(szTmp, 
+		"SELECT A.DeviceID, A.DelimitedValue, B.ID, B.Type, B.SubType, B.nValue, B.sValue, A.TargetType, A.TargetVariable, A.TargetDeviceID, A.TargetProperty, A.IncludeUnit, B.SwitchType FROM FibaroLink as A, DeviceStatus as B "
+		"WHERE (A.DeviceID == '%llu' AND A.Enabled = '1' AND A.DeviceID==B.ID)",
+		m_DeviceRowIdx);
+	result=m_sql.query(szTmp);
+	if (result.size()>0)
+	{
+		std::string sendValue;
+		std::vector<std::vector<std::string> >::const_iterator itt;
+		for (itt=result.begin(); itt!=result.end(); ++itt)
 		{
-			std::string sendValue;
-			std::vector<std::vector<std::string> >::const_iterator itt;
-			for (itt=result.begin(); itt!=result.end(); ++itt)
-			{
-				std::vector<std::string> sd=*itt;
-				int delpos = atoi(sd[1].c_str());
-				int dType = atoi(sd[3].c_str());
-				int dSubType = atoi(sd[4].c_str());
-				int nValue = atoi(sd[5].c_str());
-				std::string sValue = sd[6].c_str();
-				int targetType = atoi(sd[7].c_str());
-				std::string targetVariable = sd[8].c_str();
-				int targetDeviceID = atoi(sd[9].c_str());
-				std::string targetProperty = sd[10].c_str();
-				int includeUnit = atoi(sd[11].c_str());
-				int metertype = atoi(sd[12].c_str());
-				std::string lstatus="";
+			std::vector<std::string> sd=*itt;
+			int delpos = atoi(sd[1].c_str());
+			int dType = atoi(sd[3].c_str());
+			int dSubType = atoi(sd[4].c_str());
+			int nValue = atoi(sd[5].c_str());
+			std::string sValue = sd[6].c_str();
+			int targetType = atoi(sd[7].c_str());
+			std::string targetVariable = sd[8].c_str();
+			int targetDeviceID = atoi(sd[9].c_str());
+			std::string targetProperty = sd[10].c_str();
+			int includeUnit = atoi(sd[11].c_str());
+			int metertype = atoi(sd[12].c_str());
+			std::string lstatus="";
 
-				if ((targetType==0)||(targetType==1)) {
-					if (delpos == 0) {
-						int llevel=0;
-						bool bHaveDimmer=false;
-						bool bHaveGroupCmd=false;
-						int maxDimLevel=0;
-    					GetLightStatus(dType,dSubType,(_eSwitchType)metertype,nValue,sValue,lstatus,llevel,bHaveDimmer,maxDimLevel,bHaveGroupCmd);
-						sendValue = lstatus;
-					}
-					else if (delpos>0) {
-						std::vector<std::string> strarray;
-						if (sValue.find(";")!=std::string::npos) {
-							StringSplit(sValue, ";", strarray);
-							if (int(strarray.size())>=delpos)
-							{
-								std::string rawsendValue = strarray[delpos-1].c_str();
-								sendValue = ProcessSendValue(rawsendValue,delpos,nValue,includeUnit,metertype);
-							}
-						}
-					}
-				}
-				else { // scenes/reboot, only on/off
+			if ((targetType==0)||(targetType==1)) {
+				if (delpos == 0) {
 					int llevel=0;
 					bool bHaveDimmer=false;
 					bool bHaveGroupCmd=false;
 					int maxDimLevel=0;
-    				GetLightStatus(dType,dSubType, STYPE_OnOff,nValue,sValue,lstatus,llevel,bHaveDimmer,maxDimLevel,bHaveGroupCmd);
+    				GetLightStatus(dType,dSubType,(_eSwitchType)metertype,nValue,sValue,lstatus,llevel,bHaveDimmer,maxDimLevel,bHaveGroupCmd);
 					sendValue = lstatus;
 				}
-				if (sendValue !="") {
-					std::string sResult;
-					std::stringstream sPostData;
-					std::stringstream Url;
-					std::vector<std::string> ExtraHeaders;
-					 sendValue = CURLEncode::URLEncode(sendValue);
-					
-					if (targetType==0) {
-						Url << "http://" << fibaroUsername << ":" << fibaroPassword << "@" << fibaroIP << "/api/globalVariables";
-						sPostData << "{\"name\": \"" << targetVariable << "\", \"value\": \"" << sendValue << "\"}";
-						if (fibaroDebugActive) {
-							_log.Log(LOG_NORM,"FibaroLink: sending global variable %s with value: %s",targetVariable.c_str(),sendValue.c_str());
-						}
-						if (!HTTPClient::PUT(Url.str(),sPostData.str(),ExtraHeaders,sResult))
+				else if (delpos>0) {
+					std::vector<std::string> strarray;
+					if (sValue.find(";")!=std::string::npos) {
+						StringSplit(sValue, ";", strarray);
+						if (int(strarray.size())>=delpos)
 						{
-							_log.Log(LOG_ERROR,"Error sending data to Fibaro!");
-						
+							std::string rawsendValue = strarray[delpos-1].c_str();
+							sendValue = ProcessSendValue(rawsendValue,delpos,nValue,includeUnit,metertype);
 						}
-					}	
-					else if (targetType==1) {
-						Url << "http://" << fibaroUsername << ":" << fibaroPassword << "@" << fibaroIP << "/api/callAction?deviceid=" << targetDeviceID << "&name=setProperty&arg1=" << targetProperty << "&arg2=" << sendValue;
+					}
+				}
+			}
+			else { // scenes/reboot, only on/off
+				int llevel=0;
+				bool bHaveDimmer=false;
+				bool bHaveGroupCmd=false;
+				int maxDimLevel=0;
+    			GetLightStatus(dType,dSubType, STYPE_OnOff,nValue,sValue,lstatus,llevel,bHaveDimmer,maxDimLevel,bHaveGroupCmd);
+				sendValue = lstatus;
+			}
+			if (sendValue !="") {
+				std::string sResult;
+				std::stringstream sPostData;
+				std::stringstream Url;
+				std::vector<std::string> ExtraHeaders;
+					sendValue = CURLEncode::URLEncode(sendValue);
+					
+				if (targetType==0) {
+					Url << "http://" << fibaroUsername << ":" << fibaroPassword << "@" << fibaroIP << "/api/globalVariables";
+
+					if (bIsV4)
+						Url << "/" << targetVariable;
+
+					sPostData << "{\"name\": \"" << targetVariable << "\", \"value\": \"" << sendValue << "\"}";
+					if (fibaroDebugActive) {
+						_log.Log(LOG_NORM,"FibaroLink: sending global variable %s with value: %s",targetVariable.c_str(),sendValue.c_str());
+					}
+					if (!HTTPClient::PUT(Url.str(),sPostData.str(),ExtraHeaders,sResult))
+					{
+						_log.Log(LOG_ERROR,"Error sending data to Fibaro!");
+						
+					}
+				}	
+				else if (targetType==1) {
+					Url << "http://" << fibaroUsername << ":" << fibaroPassword << "@" << fibaroIP << "/api/callAction?deviceid=" << targetDeviceID << "&name=setProperty&arg1=" << targetProperty << "&arg2=" << sendValue;
+					if (fibaroDebugActive) {
+						_log.Log(LOG_NORM,"FibaroLink: sending value %s to property %s of virtual device id %d",sendValue.c_str(),targetProperty.c_str(),targetDeviceID);
+					}
+					if (!HTTPClient::GET(Url.str(),sResult))
+					{
+						_log.Log(LOG_ERROR,"Error sending data to Fibaro!");
+					}
+				}
+				else if (targetType==2) {
+					if (((delpos==0)&&(lstatus=="Off"))||((delpos==1)&&(lstatus=="On"))) {
+						Url << "http://" << fibaroUsername << ":" << fibaroPassword << "@" << fibaroIP << "/api/sceneControl?id=" << targetDeviceID << "&action=start";
 						if (fibaroDebugActive) {
-							_log.Log(LOG_NORM,"FibaroLink: sending value %s to property %s of virtual device id %d",sendValue.c_str(),targetProperty.c_str(),targetDeviceID);
+							_log.Log(LOG_NORM,"FibaroLink: activating scene %d",targetDeviceID);
 						}
 						if (!HTTPClient::GET(Url.str(),sResult))
 						{
 							_log.Log(LOG_ERROR,"Error sending data to Fibaro!");
 						}
 					}
-					else if (targetType==2) {
-						if (((delpos==0)&&(lstatus=="Off"))||((delpos==1)&&(lstatus=="On"))) {
-							Url << "http://" << fibaroUsername << ":" << fibaroPassword << "@" << fibaroIP << "/api/sceneControl?id=" << targetDeviceID << "&action=start";
-							if (fibaroDebugActive) {
-								_log.Log(LOG_NORM,"FibaroLink: activating scene %d",targetDeviceID);
-							}
-							if (!HTTPClient::GET(Url.str(),sResult))
-							{
-								_log.Log(LOG_ERROR,"Error sending data to Fibaro!");
-							}
+				}
+				else if (targetType==3) {
+					if (((delpos==0)&&(lstatus=="Off"))||((delpos==1)&&(lstatus=="On"))) {
+						Url << "http://" << fibaroUsername << ":" << fibaroPassword << "@" << fibaroIP << "/api/settings/reboot";
+						if (fibaroDebugActive) {
+							_log.Log(LOG_NORM,"FibaroLink: reboot");
 						}
-					}
-					else if (targetType==3) {
-						if (((delpos==0)&&(lstatus=="Off"))||((delpos==1)&&(lstatus=="On"))) {
-							Url << "http://" << fibaroUsername << ":" << fibaroPassword << "@" << fibaroIP << "/api/settings/reboot";
-							if (fibaroDebugActive) {
-								_log.Log(LOG_NORM,"FibaroLink: reboot");
-							}
-							if (!HTTPClient::POST(Url.str(),sPostData.str(),ExtraHeaders,sResult))
-							{
-								_log.Log(LOG_ERROR,"Error sending data to Fibaro!");
-							}
+						if (!HTTPClient::POST(Url.str(),sPostData.str(),ExtraHeaders,sResult))
+						{
+							_log.Log(LOG_ERROR,"Error sending data to Fibaro!");
 						}
 					}
 				}
