@@ -107,6 +107,10 @@
 			<td><input type="checkbox" id="fibarolinkenabled" checked></td>
 		</tr>
 		<tr>
+			<td align="right" style="width:80px"><label for="fibaroisversion4"><span data-i18n="Firmware V4+">Firmware V4+</span>:</label></td>
+			<td><input type="checkbox" id="fibaroisversion4" checked></td>
+		</tr>
+		<tr>
 			<td align="right" style="width:80px"><label for="debugenabled"><span data-i18n="Debug to logfile"></span>:</label></td>
 			<td><input type="checkbox" id="debugenabled" checked></td>
 		</tr>
