@@ -70,6 +70,8 @@ Version 2.0.xxxx (xxxx 2015)
 - Changed: MySensors, Battery level now applied to correct NodeID
 - Fixed: Blockly, now escaping strings/xml
 - Changed: Now using OpenZWave security branch
+- Changed: Now possible to disable serial hardware when usb port is not available
+- Changed: FibaroLink/Datapush, support for V4 firmware
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
